Fixing bug 109854. Don't let HTMLContentSink::DemoteContainer() mess up the order of the form controls in form.elements, and rename DemoteContainer() to DemoteForm(). Patch by jkeiser@iname.com and myself, r=peterv@netscape.com, sr=jst@netscape.com